[gd_scene load_steps=14 format=3 uid="uid://bm31gemem22uc"]

[ext_resource type="Script" uid="uid://bv0hffvudv51d" path="res://addons/curved_lines_2d/assign_stroke_inspector_form.gd" id="1_j8wjx"]
[ext_resource type="Texture2D" uid="uid://31qakec1dm6y" path="res://addons/curved_lines_2d/Key.svg" id="3_2fv2a"]
[ext_resource type="StyleBox" uid="uid://v0ueesjbdyrk" path="res://addons/curved_lines_2d/snazzy_toggle_button.stylebox" id="3_df4us"]
[ext_resource type="Texture2D" uid="uid://cdkf2g8b5e55r" path="res://addons/curved_lines_2d/LineCaps.svg" id="4_bop6d"]

[sub_resource type="ButtonGroup" id="ButtonGroup_yspdc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_skbna"]
atlas = ExtResource("4_bop6d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyj8c"]
atlas = ExtResource("4_bop6d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fexsd"]
atlas = ExtResource("4_bop6d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="ButtonGroup" id="ButtonGroup_df4us"]

[sub_resource type="ButtonGroup" id="ButtonGroup_bop6d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yspdc"]
atlas = ExtResource("4_bop6d")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv3vu"]
atlas = ExtResource("4_bop6d")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfdnd"]
atlas = ExtResource("4_bop6d")
region = Rect2(32, 32, 32, 32)

[node name="AssignStrokeInspectorForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8wjx")

[node name="StrokeColorFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StrokeColorFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the default_color of the assigned Line2D."
mouse_filter = 0
text = "Stroke Color"

[node name="HBoxContainer" type="HBoxContainer" parent="StrokeColorFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="StrokeColorFieldContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the default_color of the assigned Line2D."
text = "Stroke"
color = Color(1, 1, 1, 1)

[node name="AddStrokeColorKeyFrameButton" type="Button" parent="StrokeColorFieldContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Click to add a key frame to the current animation for the Line2D's default_color property"
icon = ExtResource("3_2fv2a")

[node name="StrokeWidthFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StrokeWidthFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the width of the assign Line2D node"
mouse_filter = 0
text = "Stroke Width"

[node name="HBoxContainer" type="HBoxContainer" parent="StrokeWidthFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StrokeWidthFloatFieldContainer" type="PanelContainer" parent="StrokeWidthFieldContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the width of the assign Line2D node"

[node name="AddStrokeWidthKeyFrameButton" type="Button" parent="StrokeWidthFieldContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Click to add a key frame to the current animation for the Line2D's width property"
icon = ExtResource("3_2fv2a")

[node name="BeginLineCapFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="BeginLineCapFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the begin_cap_mode of the assigned Line2D node to:
- Line Cap None
- Line Cap Box
- Line Cap Round

"
mouse_filter = 0
text = "Begin Cap Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="BeginLineCapFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BeginNoCapToggleButton" type="Button" parent="BeginLineCapFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the begin_cap_mode of the assigned Line2D node to:
- Line Cap None
"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
button_pressed = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_yspdc")
icon = SubResource("AtlasTexture_skbna")

[node name="BeginBoxCapToggleButton" type="Button" parent="BeginLineCapFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the begin_cap_mode of the assigned Line2D node to:
- Line Cap Box

"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_yspdc")
icon = SubResource("AtlasTexture_kyj8c")

[node name="BeginRoundCapToggleButton" type="Button" parent="BeginLineCapFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the begin_cap_mode of the assigned Line2D node to:
- Line Cap Round

"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_yspdc")
icon = SubResource("AtlasTexture_fexsd")

[node name="EndLineCapFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="EndLineCapFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the end_cap_mode of the assigned Line2D node to:
- Line Cap None
- Line Cap Box
- Line Cap Round

"
mouse_filter = 0
text = "End Cap Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="EndLineCapFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndNoCapToggleButton" type="Button" parent="EndLineCapFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the end_cap_mode of the assigned Line2D node to:
- Line Cap None
"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
button_pressed = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_df4us")
icon = SubResource("AtlasTexture_skbna")

[node name="EndBoxCapToggleButton" type="Button" parent="EndLineCapFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the end_cap_mode of the assigned Line2D node to:
- Line Cap Box

"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_df4us")
icon = SubResource("AtlasTexture_kyj8c")

[node name="EndRoundCapToggleButton" type="Button" parent="EndLineCapFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the end_cap_mode of the assigned Line2D node to:
- Line Cap Round

"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_df4us")
icon = SubResource("AtlasTexture_fexsd")

[node name="LineJointFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="LineJointFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the joint_mode of the assigned Line2D node to:
- Sharp
- Bevel
- Round"
mouse_filter = 0
text = "Line Joint Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="LineJointFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineJointSharpToggleButton" type="Button" parent="LineJointFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the joint_mode of the assigned Line2D node to:
- Sharp"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
button_pressed = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_bop6d")
icon = SubResource("AtlasTexture_yspdc")

[node name="LineJointBevelToggleButton" type="Button" parent="LineJointFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the joint_mode of the assigned Line2D node to:
- Bevel"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_bop6d")
icon = SubResource("AtlasTexture_rv3vu")

[node name="LineJointRoundToggleButton" type="Button" parent="LineJointFieldContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "This will set the joint_mode of the assigned Line2D node to:
- Round"
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_df4us")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_bop6d")
icon = SubResource("AtlasTexture_hfdnd")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will create a new Line2D node and assign it to the line property of this ScalableVectorScape2D."
mouse_filter = 0
text = "Add Stroke"

[node name="CreateStrokeButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "This will create a new Line2D node and assign it to the line property of this ScalableVectorScape2D."
text = "Add Stroke"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ButtonContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click on this button to select the Line2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like gradients, width curvature, and repeating textures."
mouse_filter = 0
text = "Edit Line2D *"

[node name="GotoLine2DButton" type="Button" parent="ButtonContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Click on this button to select the Line2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like gradients, width curvature, and repeating textures."
text = "Edit Line2D"

[connection signal="color_changed" from="StrokeColorFieldContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="StrokeColorFieldContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_toggled"]
[connection signal="pressed" from="StrokeColorFieldContainer/HBoxContainer/AddStrokeColorKeyFrameButton" to="." method="_on_add_stroke_color_key_frame_button_pressed"]
[connection signal="pressed" from="StrokeWidthFieldContainer/HBoxContainer/AddStrokeWidthKeyFrameButton" to="." method="_on_add_stroke_width_key_frame_button_pressed"]
[connection signal="button_down" from="BeginLineCapFieldContainer/HBoxContainer/BeginNoCapToggleButton" to="." method="_on_begin_no_cap_toggle_button_button_down"]
[connection signal="button_down" from="BeginLineCapFieldContainer/HBoxContainer/BeginBoxCapToggleButton" to="." method="_on_begin_box_cap_toggle_button_button_down"]
[connection signal="button_down" from="BeginLineCapFieldContainer/HBoxContainer/BeginRoundCapToggleButton" to="." method="_on_begin_round_cap_toggle_button_button_down"]
[connection signal="button_down" from="EndLineCapFieldContainer/HBoxContainer/EndNoCapToggleButton" to="." method="_on_end_no_cap_toggle_button_button_down"]
[connection signal="button_down" from="EndLineCapFieldContainer/HBoxContainer/EndBoxCapToggleButton" to="." method="_on_end_box_cap_toggle_button_button_down"]
[connection signal="button_down" from="EndLineCapFieldContainer/HBoxContainer/EndRoundCapToggleButton" to="." method="_on_end_round_cap_toggle_button_button_down"]
[connection signal="button_down" from="LineJointFieldContainer/HBoxContainer/LineJointSharpToggleButton" to="." method="_on_line_joint_sharp_toggle_button_button_down"]
[connection signal="button_down" from="LineJointFieldContainer/HBoxContainer/LineJointBevelToggleButton" to="." method="_on_line_joint_bevel_toggle_button_button_down"]
[connection signal="button_down" from="LineJointFieldContainer/HBoxContainer/LineJointRoundToggleButton" to="." method="_on_line_joint_round_toggle_button_button_down"]
[connection signal="pressed" from="ButtonContainer/CreateStrokeButton" to="." method="_on_create_stroke_button_pressed"]
[connection signal="pressed" from="ButtonContainer2/GotoLine2DButton" to="." method="_on_goto_line_2d_button_pressed"]
